# StudyBuddy

./: .coveragerc  .gitignore  Makefile  README.md  conftest.py  pyproject.toml
src/cs361_studybuddy/: __init__.py  main.py  task.txt  timer_data.json
tests/cs361_studybuddy/: test_main.py
workflows/: python-tests.yml
